[package]
name = "alias_explorer"
version = "0.0.1"
authors = ["Yannick Funk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde_json = "1.0.61"
futures = "0.3.9"
simple_logger = "1.11.0"
serde = { version = "1.0", features = ["derive"]}
mysql = "20.1.0"
chrono = "0.4.19"